# deepfinder.py

./: .giteaignore  .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  codeql.yml  greetings.yml  mirror.yml  pr-size-labeler.yml  publish.yml  secret-scan.yml  test.yml
deepfinder/: __init__.py  deep_find.py  entity.py
deepgetter/: deep_get.py
src/: deep_find.py
src/deepfinder/: __init__.py
tests/unit/: deep_find_by_type_test.py  deep_find_defaults_test.py  deep_find_in_class_test.py  deep_find_in_dicts_test.py  deep_find_in_frozen_sets_test.py  deep_find_in_lists_test.py  deep_find_in_sets_test.py  deep_find_in_tuples_test.py  deep_get_by_type_test.py  deep_get_find_in_deep_test.py  deep_get_find_test.py  native_deep_find_test.py
