[metadata]
name = deepfinder
version = 1.4.0
author = Javier Parada
author_email = javierparadadev@gmail.com
description = Search attributes easily using dot paths. Within structures of type dictionary, list and embedded substructures with simple format 'dict.users.0.name'.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
platform = any
url = https://github.com/jparadadev/deepfinder.py
project_urls =
    Bug Tracker = https://github.com/jparadadev/deepfinder.py/issues
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
keywords =
    find
    get
    dictionary
    list
    array
    deep
    find
    structure
    nested
    nested
    data

[options]
packages =
    deepfinder
include_package_data = True
python_requires = >=3.7
